<package>
  <name>datastax_cpp_catkin</name>
  <version>2.5.0</version>
  <description>Wrapper for the latest version of the DataStax C++/C driver for Apache Cassandra.</description>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
